--- a/Rapidlaunch/wwwroot/Assets/RocketLaunch.html
+++ b/Rapidlaunch/wwwroot/Assets/RocketLaunch.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -1138,7 +1138,7 @@
 .special ul li a{
 
     color:#fff;
-    text-decoration: blink;
+   
 
 }
 
